@@ -8,63 +8,6 @@
 #include "soup-value-utils.h"
 
 #include <string.h>
-#include <gobject/gvaluecollector.h>
-
-/**
- * soup_value_setv:
- * @val: a #GValue
- * @type: a #GType
- * @args: #va_list pointing to a value of type @type
- *
- * Tries to copy an argument of type @type from @args into @val. @val
- * will point directly to the value in @args rather than copying it,
- * so you must g_value_copy() it if you want it to remain valid.
- *
- * Return value: success or failure
- **/
-gboolean
-soup_value_setv (GValue *val, GType type, va_list args)
-{
-	char *error = NULL;
-
-	memset (val, 0, sizeof (GValue));
-	g_value_init (val, type);
-	G_VALUE_COLLECT (val, args, G_VALUE_NOCOPY_CONTENTS, &error);
-	if (error) {
-		g_free (error);
-		return FALSE;
-	} else
-		return TRUE;
-}
-
-/**
- * soup_value_getv:
- * @val: a #GValue
- * @type: a #GType
- * @args: #va_list pointing to a value of type pointer-to-@type
- *
- * Tries to extract a value of type @type from @val into @args. The
- * return value will point to the same data as @val rather than being
- * a copy of it.
- *
- * Return value: success or failure
- **/
-gboolean
-soup_value_getv (GValue *val, GType type, va_list args)
-{
-	char *error = NULL;
-
-	if (!val || G_VALUE_TYPE (val) != type)
-		return FALSE;
-
-	G_VALUE_LCOPY (val, args, G_VALUE_NOCOPY_CONTENTS, &error);
-	if (error) {
-		g_free (error);
-		return FALSE;
-	} else
-		return TRUE;
-}
-
 
 static void
 soup_value_hash_value_free (gpointer val)
@@ -114,24 +57,17 @@ soup_value_hash_insert_value (GHashTable *hash, const char *key, GValue *value)
  *
  * Inserts the provided value of type @type into @hash. (Unlike with
  * g_hash_table_insert(), both the key and the value are copied).
- *
- * Return value: %TRUE if a value of type @type could be parsed,
- * %FALSE if not.
  **/
-gboolean
+void
 soup_value_hash_insert (GHashTable *hash, const char *key, GType type, ...)
 {
 	va_list args;
 	GValue val;
-	gboolean ok;
 
 	va_start (args, type);
-	ok = soup_value_setv (&val, type, args);
+	SOUP_VALUE_SETV (&val, type, args);
 	va_end (args);
-
-	if (ok)
-		soup_value_hash_insert_value (hash, key, &val);
-	return ok;
+	soup_value_hash_insert_value (hash, key, &val);
 }
 
 /**
@@ -151,13 +87,17 @@ gboolean
 soup_value_hash_lookup (GHashTable *hash, const char *key, GType type, ...)
 {
 	va_list args;
-	gboolean got;
+	GValue *value;
+
+	value = g_hash_table_lookup (hash, key);
+	if (!value || !G_VALUE_HOLDS (value, type))
+		return FALSE;
 
 	va_start (args, type);
-	got = soup_value_getv (g_hash_table_lookup (hash, key), type, args);
+	SOUP_VALUE_GETV (value, type, args);
 	va_end (args);
 
-	return got;
+	return TRUE;
 }
 
 
@@ -177,13 +117,12 @@ soup_value_array_from_args (va_list args)
 {
 	GValueArray *array;
 	GType type;
+	GValue val;
 
 	array = g_value_array_new (1);
 	while ((type = va_arg (args, GType)) != G_TYPE_INVALID) {
-		if (!soup_value_array_appendv (array, type, args)) {
-			g_value_array_free (array);
-			return NULL;
-		}
+		SOUP_VALUE_SETV (&val, type, args);
+		g_value_array_append (array, &val);
 	}
 	return array;
 }
@@ -204,14 +143,17 @@ gboolean
 soup_value_array_to_args (GValueArray *array, va_list args)
 {
 	GType type;
+	GValue *value;
 	int i;
 
 	for (i = 0; i < array->n_values; i++) {
 		type = va_arg (args, GType);
 		if (type == G_TYPE_INVALID)
 			return FALSE;
-		if (!soup_value_getv (g_value_array_get_nth (array, i), type, args))
+		value = g_value_array_get_nth (array, i);
+		if (!G_VALUE_HOLDS (value, type))
 			return FALSE;
+		SOUP_VALUE_GETV (value, type, args);
 	}
 	return TRUE;
 }
@@ -226,24 +168,17 @@ soup_value_array_to_args (GValueArray *array, va_list args)
  * Inserts the provided value of type @type into @array as with
  * g_value_array_insert(). (The provided data is copied rather than
  * being inserted directly.)
- *
- * Return value: %TRUE if a value of type @type could be parsed,
- * %FALSE if not.
  **/
-gboolean
+void
 soup_value_array_insert (GValueArray *array, guint index_, GType type, ...)
 {
 	va_list args;
 	GValue val;
-	gboolean ok;
 
 	va_start (args, type);
-	ok = soup_value_setv (&val, type, args);
+	SOUP_VALUE_SETV (&val, type, args);
 	va_end (args);
-
-	if (ok)
-		g_value_array_insert (array, index_, &val);
-	return ok;
+	g_value_array_insert (array, index_, &val);
 }
 
 /**
@@ -255,45 +190,17 @@ soup_value_array_insert (GValueArray *array, guint index_, GType type, ...)
  * Appends the provided value of type @type to @array as with
  * g_value_array_append(). (The provided data is copied rather than
  * being inserted directly.)
- *
- * Return value: %TRUE if a value of type @type could be parsed,
- * %FALSE if not.
  **/
-gboolean
+void
 soup_value_array_append (GValueArray *array, GType type, ...)
 {
 	va_list args;
-	gboolean ok;
-
-	va_start (args, type);
-	ok = soup_value_array_appendv (array, type, args);
-	va_end (args);
-	return ok;
-}
-
-/**
- * soup_value_array_appendv:
- * @array: a #GValueArray
- * @type: a #GType
- * @args: #va_list pointing to an argument of type @type
- *
- * Inserts the provided value of type @type into @array as with
- * g_value_array_insert(). (The provided data is copied rather than
- * being inserted directly.)
- *
- * Return value: %TRUE if a value of type @type could be parsed,
- * %FALSE if not.
- **/
-gboolean
-soup_value_array_appendv (GValueArray *array, GType type, va_list args)
-{
 	GValue val;
 
-	if (soup_value_setv (&val, type, args)) {
-		g_value_array_append (array, &val);
-		return TRUE;
-	} else
-		return FALSE;
+	va_start (args, type);
+	SOUP_VALUE_SETV (&val, type, args);
+	va_end (args);
+	g_value_array_append (array, &val);
 }
 
 /**
@@ -312,14 +219,17 @@ soup_value_array_appendv (GValueArray *array, GType type, va_list args)
 gboolean
 soup_value_array_get_nth (GValueArray *array, guint index_, GType type, ...)
 {
+	GValue *value;
 	va_list args;
-	gboolean got;
+
+	value = g_value_array_get_nth (array, index_);
+	if (!value || !G_VALUE_HOLDS (value, type))
+		return FALSE;
 
 	va_start (args, type);
-	got = soup_value_getv (g_value_array_get_nth (array, index_), type, args);
+	SOUP_VALUE_GETV (value, type, args);
 	va_end (args);
-
-	return got;
+	return TRUE;
 }
 
 
